[gd_scene load_steps=3 format=3 uid="uid://bih3gp7mhyobw"]

[ext_resource type="Script" path="res://Inventory/inv_ui_slot.gd" id="1_18477"]
[ext_resource type="Texture2D" uid="uid://bypnn00ubkcw3" path="res://Actors/sprites/objects/inventory-slot.png" id="1_aujr1"]

[node name="inv_ui_slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
anchors_preset = -1
anchor_right = 0.125
anchor_bottom = 0.222
offset_bottom = 0.143982
script = ExtResource("1_18477")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(9, 9)
texture = ExtResource("1_aujr1")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 135.0
offset_bottom = 134.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="item_display" type="Sprite2D" parent="CenterContainer/Panel"]
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(37, 23)
layout_mode = 0
offset_left = -57.0
offset_top = -69.0
offset_right = -18.0
offset_bottom = -46.0
scale = Vector2(3, 3)
text = "21"
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer/Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Panel" to="." method="_on_panel_mouse_exited"]
